[ADD] - Authorize /renew refresh token
