# public/swagger.json
@@ -1036,12 +1036,49 @@
 			"post": {
 				"operationId": "RefreshToken",
 				"responses": {
-					"204": {
-						"description": "No content"
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"refresh": {
+											"type": "string"
+										},
+										"access": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"refresh",
+										"access"
+									],
+									"type": "object"
+								}
+							}
+						}
 					}
 				},
 				"security": [],
-				"parameters": []
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"refresh_token": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"refresh_token"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
 			}
 		},
 		"/auth/authorize": {
@@ -1060,6 +1097,9 @@
 										"redirectTo": {
 											"type": "string"
 										},
+										"refresh": {
+											"type": "string"
+										},
 										"access": {
 											"type": "string"
 										}
@@ -1067,6 +1107,7 @@
 									"required": [
 										"message",
 										"redirectTo",
+										"refresh",
 										"access"
 									],
 									"type": "object"
